--- a/styles/base.css
+++ b/styles/base.css
@@ -1,41 +1,42 @@
-/* .roboto-thin {
+/* 
+.roboto-thin {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
     font-style: normal;
   }
   
-  .roboto-regular {
+.roboto-regular {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
   }
   
-  .roboto-bold {
+.roboto-bold {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: normal;
   }
   
-  .roboto-black {
+.roboto-black {
     font-family: "Roboto", sans-serif;
     font-weight: 900;
     font-style: normal;
   }
   
-  .roboto-regular-italic {
+.roboto-regular-italic {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: italic;
   }
   
-  .roboto-bold-italic {
+.roboto-bold-italic {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: italic;
   }
    */
 
-   * {
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -89,8 +90,10 @@ nav a:hover {
 
 .card {
     border: 1px solid gainsboro;
-    border-radius: 20px;
+    border-radius: 15px; /* Redondea solo los extremos de arriba */
+    box-shadow: 0px 0px 12px gainsboro; /* Agrega una sombra del mismo color que el borde */
 }
+
 
 .content {
     margin: 20px;
@@ -116,6 +119,7 @@ nav a:hover {
     color: #fff;
     padding: 10px;
     font-weight: 700;
+    border-radius: 15px 15px 0 0 ;
 }
 
 .image-container {
@@ -135,6 +139,13 @@ h3{
     margin-top: 20px; /* Menor margen superior */
 }
 
+footer{
+    background-color: #287086;
+    color: #fff;
+    padding: 10px;
+}
+
+
 /* Media Queries para pantallas más grandes */
 @media (min-width: 640px) {
     .content {
@@ -143,7 +154,6 @@ h3{
 
     .grid2 {
         grid-template-columns:  2fr; /* Dos columnas para el grid en card1 */
-        border: 1px solid red;
     }
 
     nav ul {
