Media Query Example Page

--- a/styles/base.css
+++ b/styles/base.css
@@ -76,6 +76,7 @@ nav a {
     display: block;
     text-decoration: none;
     color: #fff;
+    padding: 8px;
 }
 
 nav a:hover {
@@ -132,11 +133,18 @@ nav a:hover {
 }
 
 h3{
-    text-align: left;
+    text-align: center;
+    text-decoration: underline;
 }
+
+.flag{
+    display: none;
+}
+
 .resources {
     list-style-type: none;
     margin: 20px; /* Menor margen superior */
+
 }
 
 footer{
@@ -173,13 +181,14 @@ footer{
     }
     
     .image-container img {
-        width: 200px; /* Ajustar el ancho de la imagen */
+        width: 180px; /* Ajustar el ancho de la imagen */
         height: auto; /* Mantener la relación de aspecto */
     }
     
-    .image-container city{
+    .flag{
+        display: grid;
         grid-column: 1;
-        
+        justify-content: center;
     }
 
     .secondp{
